--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -33,11 +33,11 @@ body {
 }
 .display-5 {
   font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.5;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
 }
 .display-7 {
   font-family: 'IBM Plex Sans', sans-serif;
@@ -74,9 +74,9 @@ body {
     line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.6rem;
-    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.44rem;
+    font-size: calc( 1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
     font-size: 0.96rem;
@@ -774,21 +774,10 @@ a {
   text-align: left;
   color: #000000;
 }
-.cid-s48vaXqeL6 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  background-color: #ffcf00;
-}
-.cid-s48vaXqeL6 .mbr-section-title {
-  text-align: left;
-}
-.cid-s48vaXqeL6 .mbr-section-subtitle {
-  text-align: left;
-}
 .cid-s9Lvrt8sRg {
   padding-top: 5rem;
-  padding-bottom: 2rem;
-  background-color: #ffffff;
+  padding-bottom: 0rem;
+  background-color: #ffcf00;
 }
 .cid-s9Lvrt8sRg .mbr-section-title {
   text-align: left;
@@ -797,6 +786,11 @@ a {
 .cid-s9Lvrt8sRg .mbr-section-subtitle {
   text-align: left;
   color: #000000;
+}
+.cid-s9XQDcXpEY {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #ffcf00;
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
@@ -1630,20 +1624,20 @@ a {
     left: -1rem;
   }
 }
-.cid-s9Ltp1i0u2 {
+.cid-s9XPLbWrGX {
   padding-top: 6rem;
   padding-bottom: 1rem;
   background-color: #ffcf00;
 }
-.cid-s9Ltp1i0u2 .carousel-item {
+.cid-s9XPLbWrGX .carousel-item {
   justify-content: center;
 }
-.cid-s9Ltp1i0u2 .carousel-item.active,
-.cid-s9Ltp1i0u2 .carousel-item-next,
-.cid-s9Ltp1i0u2 .carousel-item-prev {
+.cid-s9XPLbWrGX .carousel-item.active,
+.cid-s9XPLbWrGX .carousel-item-next,
+.cid-s9XPLbWrGX .carousel-item-prev {
   display: flex;
 }
-.cid-s9Ltp1i0u2 .carousel-controls a {
+.cid-s9XPLbWrGX .carousel-controls a {
   transition: opacity .5s;
   font-size: 22px;
   position: absolute;
@@ -1656,13 +1650,13 @@ a {
   color: #585858;
   background: #c8c6c6;
 }
-.cid-s9Ltp1i0u2 .carousel-control-next span {
+.cid-s9XPLbWrGX .carousel-control-next span {
   padding-left: 5px;
 }
-.cid-s9Ltp1i0u2 .carousel-control-prev span {
+.cid-s9XPLbWrGX .carousel-control-prev span {
   padding-right: 5px;
 }
-.cid-s9Ltp1i0u2 .user_image {
+.cid-s9XPLbWrGX .user_image {
   width: 200px;
   height: 200px;
   margin-bottom: 1.6rem;
@@ -1670,13 +1664,13 @@ a {
   border-radius: 50%;
   margin: 0 auto 2rem auto;
 }
-.cid-s9Ltp1i0u2 .user_image img {
+.cid-s9XPLbWrGX .user_image img {
   width: 100%;
   min-width: 100%;
   min-height: 100%;
 }
 @media (max-width: 230px) {
-  .cid-s9Ltp1i0u2 .user_image {
+  .cid-s9XPLbWrGX .user_image {
     width: 100%;
     height: auto;
   }
@@ -2548,392 +2542,200 @@ a {
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
-.cid-s9LnWfdHXQ {
-  padding-top: 3rem;
-  padding-bottom: 2rem;
-  background-color: #232323;
-}
-.cid-s9LnWfdHXQ .list {
-  list-style: none;
-  padding-left: 0;
-  color: #bbbbbb;
-}
-@media (max-width: 991px) {
-  .cid-s9LnWfdHXQ .list {
-    margin-bottom: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-s9LnWfdHXQ .list {
-    margin-bottom: 0rem;
-  }
-}
-.cid-s48OLK6784 {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-s48OLK6784 nav.navbar {
-  position: fixed;
-}
-.cid-s48OLK6784 .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: '\e966';
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
-  overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-s48OLK6784 .dropdown-menu {
-  padding: 0;
-}
-.cid-s48OLK6784 .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-s48OLK6784 .dropdown-item:hover,
-.cid-s48OLK6784 .dropdown-item:focus {
-  background: #6592e6 !important;
-  color: white !important;
-}
-.cid-s48OLK6784 .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: .667em 1em !important;
-}
-.cid-s48OLK6784 .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-s48OLK6784 .nav-link {
-  position: relative;
-}
-.cid-s48OLK6784 .container {
-  display: flex;
-  margin: auto;
-}
-.cid-s48OLK6784 .iconfont-wrapper {
-  color: #000000 !important;
-  font-size: 1.5rem;
-  padding-right: .5rem;
-}
-.cid-s48OLK6784 .navbar-caption {
-  padding-right: 4rem;
-}
-.cid-s48OLK6784 .dropdown-menu,
-.cid-s48OLK6784 .navbar.opened {
-  background: #000000 !important;
-}
-.cid-s48OLK6784 .nav-item:focus,
-.cid-s48OLK6784 .nav-link:focus {
-  outline: none;
-}
-.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-left: -1.8rem;
-  padding-right: 1rem;
-  font-size: inherit;
-}
-.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-s48OLK6784 .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-s48OLK6784 .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-s48OLK6784 .navbar {
-  min-height: 77px;
-  transition: all .3s;
-  border-bottom: 1px solid transparent;
-  background: #000000;
-}
-.cid-s48OLK6784 .navbar:not(.navbar-short) {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-s48OLK6784 .navbar.opened {
-  transition: all .3s;
-}
-.cid-s48OLK6784 .navbar .dropdown-item {
-  padding: .5rem 1.8rem;
-}
-.cid-s48OLK6784 .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-s48OLK6784 .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-s48OLK6784 .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-s48OLK6784 .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-@media (min-width: 992px) {
-  .cid-s48OLK6784 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
-.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 55%;
-}
-.cid-s48OLK6784 .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: .25rem 1.5rem;
-  text-align: center;
-}
-.cid-s48OLK6784 .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-}
-@media (max-width: 991px) {
-  .cid-s48OLK6784 .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-s48OLK6784 .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 55%;
-  }
-  .cid-s48OLK6784 .navbar .navbar-logo img {
-    height: 3.8rem !important;
-  }
-  .cid-s48OLK6784 .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-item {
-    padding: .25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-s48OLK6784 .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-s48OLK6784 .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-s48OLK6784 .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-}
-.cid-s48OLK6784 .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-s48OLK6784 .navbar.navbar-short .navbar-logo img {
-  height: 3rem !important;
-}
-.cid-s48OLK6784 .navbar.navbar-short .navbar-brand {
-  padding: 0;
-}
-.cid-s48OLK6784 .navbar-brand {
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 0;
-  transition: all .3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-s48OLK6784 .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-s48OLK6784 .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-s48OLK6784 .dropdown-item.active,
-.cid-s48OLK6784 .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-s48OLK6784 .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-s48OLK6784 .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-s48OLK6784 .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-s48OLK6784 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #000000;
-}
-.cid-s48OLK6784 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-s48OLK6784 .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-s48OLK6784 ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-s48OLK6784 .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-s48OLK6784 button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all .2s;
-  position: relative;
-  align-self: center;
-}
-.cid-s48OLK6784 button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: currentColor;
-}
-.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-s48OLK6784 nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-s48OLK6784 nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-s48OLK6784 nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-s48OLK6784 nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-s48OLK6784 .navbar-dropdown {
-  padding: .5rem 1rem;
-  position: fixed;
-}
-.cid-s48OLK6784 a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-s48OLK6784 .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-s48OLK6784 .navbar {
-    height: 77px;
-  }
-  .cid-s48OLK6784 .navbar.opened {
-    height: auto;
-  }
-  .cid-s48OLK6784 .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
-.cid-s9LpEQfIT5 {
-  background-image: url("../../../assets/images/whatsapp-image-2020-09-05-at-7.34.33-pm-1280x720.jpeg");
-}
-.cid-s9LpEQfIT5 .mbr-section-title {
-  color: #ffffff;
-}
-.cid-s9LpEQfIT5 .mbr-text,
-.cid-s9LpEQfIT5 .mbr-section-btn {
-  color: #ffffff;
-}
-.cid-s9LsqG17UI {
+.cid-s9WU0x8cUe {
   padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 6rem;
+  background-color: #ffcf00;
+}
+.cid-s9WU0x8cUe .item:focus,
+.cid-s9WU0x8cUe span:focus {
+  outline: none;
+}
+.cid-s9WU0x8cUe .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-s9WU0x8cUe .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-s9WU0x8cUe .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s9WU0x8cUe .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-s9WU0x8cUe .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-s9WU0x8cUe .mbr-section-title {
+  color: #232323;
+}
+.cid-s9WU0x8cUe .mbr-text,
+.cid-s9WU0x8cUe .mbr-section-btn {
+  text-align: left;
+}
+.cid-s9WU0x8cUe .item-title {
+  text-align: left;
+}
+.cid-s9WU0x8cUe .item-subtitle {
+  text-align: center;
+}
+.cid-s9WU0x8cUe .mbr-section-subtitle {
+  text-align: left;
+}
+.cid-s9WWb8dymG {
+  padding-top: 4rem;
+  padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-s9LsqG17UI .line {
-  background-color: #6592e6;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
+.cid-s9WWb8dymG .item:focus,
+.cid-s9WWb8dymG span:focus {
+  outline: none;
 }
-.cid-s9LsrrcGt0 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.cid-s9WWb8dymG .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-s9WWb8dymG .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffcf00;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-s9WWb8dymG .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s9WWb8dymG .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-s9WWb8dymG .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-s9WWb8dymG .mbr-section-title {
+  color: #232323;
+}
+.cid-s9WWb8dymG .mbr-text,
+.cid-s9WWb8dymG .mbr-section-btn {
+  text-align: left;
+}
+.cid-s9WWb8dymG .item-title {
+  text-align: left;
+}
+.cid-s9WWb8dymG .item-subtitle {
+  text-align: center;
+}
+.cid-s9WZr8Uphw {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffcf00;
+}
+.cid-s9WZr8Uphw .item:focus,
+.cid-s9WZr8Uphw span:focus {
+  outline: none;
+}
+.cid-s9WZr8Uphw .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-s9WZr8Uphw .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffffff;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-s9WZr8Uphw .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s9WZr8Uphw .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-s9WZr8Uphw .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-s9WZr8Uphw .mbr-section-title {
+  color: #232323;
+}
+.cid-s9WZr8Uphw .mbr-text,
+.cid-s9WZr8Uphw .mbr-section-btn {
+  text-align: left;
+}
+.cid-s9WZr8Uphw .item-title {
+  text-align: left;
+}
+.cid-s9WZr8Uphw .item-subtitle {
+  text-align: center;
+}
+.cid-s9X7iN3TPN {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-s9X7iN3TPN .item:focus,
+.cid-s9X7iN3TPN span:focus {
+  outline: none;
+}
+.cid-s9X7iN3TPN .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-s9X7iN3TPN .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffcf00;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-s9X7iN3TPN .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s9X7iN3TPN .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-s9X7iN3TPN .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-s9X7iN3TPN .mbr-section-title {
+  color: #232323;
+}
+.cid-s9X7iN3TPN .mbr-text,
+.cid-s9X7iN3TPN .mbr-section-btn {
+  text-align: left;
+}
+.cid-s9X7iN3TPN .item-title {
+  text-align: left;
+}
+.cid-s9X7iN3TPN .item-subtitle {
+  text-align: center;
+}
+.cid-s9XF2PUvfX {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
 .cid-s9LnWfdHXQ {
