--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4339,6 +4339,17 @@ a {
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
+.cid-satJONBTEJ {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffcf00;
+}
+.cid-satJONBTEJ .line {
+  background-color: #000000;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
 .cid-sapwLHCSw0 {
   padding-top: 2rem;
   padding-bottom: 5rem;
