create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -759,6 +759,19 @@ a {
   height: 2px;
   margin: 0 auto;
 }
+.cid-savPCw8T3x {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-savPCw8T3x .video-wrapper iframe {
+  width: 100%;
+}
+.cid-savPCw8T3x .mbr-section-title,
+.cid-savPCw8T3x .mbr-section-subtitle,
+.cid-savPCw8T3x .mbr-text {
+  text-align: center;
+}
 .cid-s48udlf8KU {
   padding-top: 5rem;
   padding-bottom: 2rem;
