--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -825,7 +825,7 @@ a {
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   background-color: #232323;
 }
 .cid-s9LnWfdHXQ .list {
@@ -1813,7 +1813,7 @@ a {
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   background-color: #232323;
 }
 .cid-s9LnWfdHXQ .list {
@@ -5149,7 +5149,7 @@ a {
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   background-color: #232323;
 }
 .cid-s9LnWfdHXQ .list {
@@ -5839,7 +5839,7 @@ a {
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   background-color: #232323;
 }
 .cid-s9LnWfdHXQ .list {
@@ -6432,13 +6432,44 @@ a {
 .cid-sazeFgqZLz .mbr-section-subtitle {
   text-align: left;
 }
-.cid-sazeFgMQl8 {
+.cid-saJ9L8iB1v {
   padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #bbbbbb;
+}
+.cid-saJ9KoSEJF {
+  padding-top: 2rem;
   padding-bottom: 5rem;
   background-color: #bbbbbb;
 }
-.cid-sazeFgMQl8 .mbr-section-subtitle {
-  text-align: left;
+.cid-saJ9KoSEJF .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-saJ9KoSEJF .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-saJ9KoSEJF .counter-container ol li {
+  list-style: none;
+  padding-left: 1rem;
+  position: relative;
+}
+.cid-saJ9KoSEJF .counter-container ol li:before {
+  position: absolute;
+  left: -40px;
+  margin-top: 5px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #6592e6;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .cid-sazeFh7xuB {
   padding-top: 3rem;
