--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -799,11 +799,6 @@ a {
   text-align: left;
   color: #000000;
 }
-.cid-s9XQDcXpEY {
-  padding-top: 0rem;
-  padding-bottom: 5rem;
-  background-color: #ffcf00;
-}
 .cid-savT7CjDqi {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -816,6 +811,9 @@ a {
 .cid-savT7CjDqi .mbr-section-subtitle,
 .cid-savT7CjDqi .mbr-text {
   text-align: center;
+}
+.cid-savT7CjDqi .mbr-section-title {
+  color: #ffffff;
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
@@ -4569,18 +4567,7 @@ a {
 .cid-sapwpddBzt {
   padding-top: 5rem;
   padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-satJONBTEJ {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
   background-color: #ffcf00;
-}
-.cid-satJONBTEJ .line {
-  background-color: #000000;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
 }
 .cid-sapwLHCSw0 {
   padding-top: 2rem;
