create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5913,6 +5913,33 @@ a {
   padding-bottom: 1rem;
   background-color: #ffffff;
 }
+.cid-sbZZGnyYxn {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sbZZGnyYxn .line {
+  background-color: #ffcf00;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-sbZZTxE1s4 {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sc0034dYg9 {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sc0034dYg9 .line {
+  background-color: #ffcf00;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
 .cid-sazeFeQFxJ {
   padding-top: 1rem;
   padding-bottom: 3rem;
@@ -5988,6 +6015,17 @@ a {
 .cid-sazDajsUxH .mbr-section-subtitle {
   text-align: left;
 }
+.cid-sc00Y7RJ8o {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sc00Y7RJ8o .line {
+  background-color: #ffcf00;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
 .cid-sazDtBVwpI {
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -6056,6 +6094,60 @@ a {
   padding-top: 0rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
+}
+.cid-sc087nLBlS {
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sc087nLBlS img,
+.cid-sc087nLBlS .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-sc087nLBlS .item:focus,
+.cid-sc087nLBlS span:focus {
+  outline: none;
+}
+.cid-sc087nLBlS .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-sc087nLBlS .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffe885;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sc087nLBlS .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sc087nLBlS .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-sc087nLBlS .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sc087nLBlS .mbr-section-title {
+  color: #232323;
+}
+.cid-sc087nLBlS .mbr-text,
+.cid-sc087nLBlS .mbr-section-btn {
+  text-align: left;
+}
+.cid-sc087nLBlS .item-title {
+  text-align: left;
+}
+.cid-sc087nLBlS .item-subtitle {
+  text-align: left;
+  color: #232323;
 }
 .cid-sazeFgqZLz {
   padding-top: 5rem;
@@ -7568,8 +7660,8 @@ a {
 }
 .cid-sbXBeDEExf {
   padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #ffffff;
+  padding-bottom: 0rem;
+  background-color: #fff0b0;
 }
 .cid-sbXBuPT1FZ {
   background-color: #fff0b0;
