create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7393,7 +7393,12 @@ a {
 .cid-sbbX2VTZjL {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #ffcf00;
+  background-color: #ffe161;
+}
+.cid-sc2N1d2V36 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fff0b0;
 }
 .cid-sbZRxXftuJ {
   padding-top: 6rem;
@@ -7523,6 +7528,11 @@ a {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #40b0bf;
+}
+.cid-sc2E5RCMQN {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #98dee8;
 }
 .cid-sc0hBggHbl {
   padding-top: 6rem;
