--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7457,6 +7457,11 @@ a {
   padding-bottom: 2rem;
   background-color: #fff0b0;
 }
+.cid-scBP9Tfxf7 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffe161;
+}
 .cid-sc6RVh5IMV {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -8439,8 +8444,48 @@ a {
 }
 .cid-scwaahO5wR {
   padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 0rem;
   background-color: #ffe885;
+}
+.cid-scBG9ZIBcb {
+  padding-top: 0rem;
+  padding-bottom: 6rem;
+  background-color: #ffe885;
+}
+@media (max-width: 991px) {
+  .cid-scBG9ZIBcb .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-scBG9ZIBcb .row {
+  flex-direction: row-reverse;
+}
+.cid-scBG9ZIBcb img {
+  width: 100%;
+}
+.cid-scBIWyYukf {
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  background-color: #fff0b0;
+}
+.cid-scBIWyYukf .mbr-section-title {
+  text-align: center;
+}
+.cid-scBIj01Sbt {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
+  background-color: #fff0b0;
+}
+@media (max-width: 991px) {
+  .cid-scBIj01Sbt .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-scBIj01Sbt .row {
+  flex-direction: row-reverse;
+}
+.cid-scBIj01Sbt img {
+  width: 100%;
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
